--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,11 @@
 {
     // Core settings
     "update.enableWindowsBackgroundUpdates": true,
-    "update.mode": "default",
+    "update.mode": "none",
     "git.ignoreMissingGitWarning": true,
     "git.enabled": false,
     "workbench.list.openMode": "doubleClick",
+
 
     // Theming
     //"workbench.colorTheme": "Gruvbox Material Dark",
@@ -17,6 +18,8 @@
     //"workbench.colorTheme": "Gruvbox Material Dark",
     //"workbench.colorTheme": "Field Lights",
     //"workbench.colorTheme": "simple dark",
+    //"workbench.colorTheme": "GitHub Dark Dimmed",
+    "workbench.colorTheme": "GitHub Dark",
 
     "workbench.iconTheme": "field-lights-monochrome",
     //"workbench.iconTheme": "material-icon-theme",
@@ -25,16 +28,15 @@
     "editor.semanticHighlighting.enabled": true,
 
     "window.titleBarStyle": "custom",
-    "window.menuBarVisibility": "compact",
     "breadcrumbs.enabled": false,
     "window.title": "${rootName}",
+    "window.restoreFullscreen": false,
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.editor.tabSizing": "shrink",
 
-    //"editor.fontFamily": "JetBrains Mono",
     "editor.fontFamily": "Iosevka SS03",
-    //"editor.fontFamily": "Fira Code",
-    //"editor.fontFamily": "Victor Mono",
+    //"editor.fontFamily": "Hack",
+    //"editor.fontFamily": "JetBrains Mono",
     "editor.fontSize": 14,
     "editor.fontLigatures": false,
 
@@ -152,12 +154,9 @@
     // LaTeX Workshop
     "latex-workshop.view.pdf.viewer": "tab",
 
-    // CMake Tools
-    //"cmake.autoRestartBuild": true,
-    //"cmake.configureOnOpen": true,
-
-    // Random stuff (possibly appended by VSCode)
-    "window.zoomLevel": 1,
+    // Appended by VSCode
     "extensions.ignoreRecommendations": true,
     "security.workspace.trust.enabled": false,
+    "window.zoomLevel": 1,
+    "window.menuBarVisibility": "compact",
 }
