--- a/settings.json
+++ b/settings.json
@@ -1,28 +1,21 @@
 {
     // Core settings
     "update.enableWindowsBackgroundUpdates": true,
-    "update.mode": "none",
+    "update.mode": "manual",
     "git.ignoreMissingGitWarning": true,
     "git.enabled": false,
     "workbench.list.openMode": "doubleClick",
 
-
     // Theming
-    //"workbench.colorTheme": "Gruvbox Material Dark",
+    //"workbench.colorTheme": "GitHub Dark",
+    //"workbench.colorTheme": "Eva Dark Bold",
+    //"workbench.colorTheme": "Night Owl (No Italics)",
     //"workbench.colorTheme": "Darcula",
-    //"workbench.colorTheme": "Nord",
-    //"workbench.colorTheme": "Dracula",
-    //"workbench.colorTheme": "Darktooth",
-    //"workbench.colorTheme": "Braver's Solarized Light (themed workbench)",
-    //"workbench.colorTheme": "Braver's Solarized Dark (themed workbench)",
-    //"workbench.colorTheme": "Gruvbox Material Dark",
-    //"workbench.colorTheme": "Field Lights",
-    //"workbench.colorTheme": "simple dark",
-    //"workbench.colorTheme": "GitHub Dark Dimmed",
-    "workbench.colorTheme": "GitHub Dark",
+    "workbench.colorTheme": "Default Dark+",
 
-    "workbench.iconTheme": "field-lights-monochrome",
+    //"workbench.iconTheme": "field-lights-monochrome",
     //"workbench.iconTheme": "material-icon-theme",
+    "workbench.iconTheme": "vscode-icons",
 
     // Appearance
     "editor.semanticHighlighting.enabled": true,
@@ -34,11 +27,13 @@
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.editor.tabSizing": "shrink",
 
-    "editor.fontFamily": "Iosevka SS03",
+    "editor.fontFamily": "Cascadia Code",
+    //"editor.fontFamily": "IBM Plex Mono",
+    //"editor.fontFamily": "Iosevka SS03",
     //"editor.fontFamily": "Hack",
     //"editor.fontFamily": "JetBrains Mono",
     "editor.fontSize": 14,
-    "editor.fontLigatures": false,
+    "editor.fontLigatures": true,
 
     "editor.cursorStyle": "line",
     "editor.cursorSmoothCaretAnimation": false,
@@ -50,7 +45,7 @@
 
     "editor.renderWhitespace": "none",
     "editor.renderLineHighlight": "none",
-    "editor.renderIndentGuides": false,
+    "editor.guides.indentation": true,
     "editor.matchBrackets": "near",
     "editor.selectionHighlight": true,
     "editor.occurrencesHighlight": false,
@@ -69,9 +64,9 @@
     "files.saveConflictResolution": "askUser",
 
     "editor.suggest.insertMode": "insert",
-    "editor.suggestOnTriggerCharacters": false,
+    "editor.suggestOnTriggerCharacters": true,
     "editor.quickSuggestions": {
-        "other": false,
+        "other": true,
         "comments": false,
         "strings": false
     },
@@ -84,9 +79,9 @@
     "editor.autoIndent": "full",
     "editor.detectIndentation": false,
 
-    "editor.formatOnPaste": false,
-    "editor.formatOnSave": false,
-    "editor.formatOnType": false,
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
 
     "workbench.editor.revealIfOpen": true,
     "search.quickOpen.includeHistory": false,
@@ -119,19 +114,34 @@
     ///////////////////////////////////////////////////////
 
     // C/C++
-    "C_Cpp.updateChannel": "Default",
     "C_Cpp.default.cppStandard": "c++20",
     "C_Cpp.default.cStandard": "c11",
     "C_Cpp.default.intelliSenseMode": "msvc-x64",
     "C_Cpp.intelliSenseEngine": "Default",
     "C_Cpp.intelliSenseEngineFallback": "Enabled",
-    "C_Cpp.intelliSenseUpdateDelay": 1000,
+    "C_Cpp.intelliSenseUpdateDelay": 500,
     "C_Cpp.errorSquiggles": "Enabled",
     "C_Cpp.enhancedColorization": "Enabled",
     "C_Cpp.formatting": "Disabled",
 
     // C#
     "csharp.referencesCodeLens.enabled": false,
+    "csharp.format.enable": true,
+
+    // JSON
+    "json.format.enable": false,
+
+    // TeX / LaTeX
+    "[tex]": {
+        "editor.formatOnPaste": false,
+        "editor.formatOnType": false,
+        "editor.formatOnSave": false
+    },
+    "[latex]": {
+        "editor.formatOnPaste": false,
+        "editor.formatOnType": false,
+        "editor.formatOnSave": false
+    },
 
     // Project Manager
     "projectManager.vscode.baseFolders": ["E:/Projects", "E:/Projekte"],
